feat(activity): show user contacts and organization locations
